@@ -2,6 +2,7 @@
 	* search.c: Extract the needle length checks from the case-insensitive search
 	  function and put them outside the function. Use recent macros to ease
 	  implementation.
+	  Make macros out of the search decision groups for maintainability.
 	* fileperuser_search.c: Split fileperuser_memcasemem() into fileperuser_memcasemem_boyer(),
 	  fileperuser_memcasemem_brute(), and fileperuser_memcasemem_single().
 	* fileperuser_search.h: Add function prototypes for new split search functions.
